--- a/.env
+++ b/.env
@@ -1,23 +1,23 @@
 APP_NAME=ABCConexao
 APP_ENV=local
-APP_KEY=base64:YOUR_APP_KEY
+APP_KEY=base64:SHA256:dseZa3Jto6CWlYsl8KaHdIsNnJoB67DudJnBBPESxPg
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=https://jacks4995.c44.integrator.host/abc-conexao/
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=15.235.9.156
 DB_PORT=3306
-DB_DATABASE=abc_conexao
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=jacks4995_abc_conexao	
+DB_USERNAME=jacks4995_admin
+DB_PASSWORD=vm102030!
 
 MAIL_MAILER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
+MAIL_HOST=mail.jacks4995.c44.integrator.host
+MAIL_PORT=465
+MAIL_USERNAME=admin
+MAIL_PASSWORD=OliveiraJakline
 MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_FROM_ADDRESS="admin@jacks4995.c44.integrator.host"
+MAIL_FROM_NAME="${Conexão ABC}"
